include(${CMAKE_HOME_DIRECTORY}/CMake/LAJEEngine.cmake)
set(GRAPHICS_GENERAL Include/GraphicTypes.h)
set(GRAPHICS_UTIL Include/GraphicsDebug.h Source/GraphicsDebug.cpp)
set(GRAPHICS_ALL ${GRAPHICS_GENERAL} ${GRAPHICS_BUFFERS} ${GRAPHICS_UTIL})
CreateModule(Graphics "${GRAPHICS_ALL}")
find_package(GLFW REQUIRED)
set(GLEW_DIR ${CMAKE_HOME_DIRECTORY}/Libraries/glew)
set(GLEW_INCLUDE_DIR ${GLEW_DIR}/include)
set(GLEW_LIBRARY ${GLEW_DIR}/lib)
find_package(GLEW REQUIRED)
target_link_libraries(Graphics PUBLIC Core Math glfw3 GLEW::GLEW)
